// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Input/> matches snapshot 1`] = `
<div>
  <input
    id="notes"
    name="notes"
    placeholder="Add some notes here"
    type="text"
    value="neon!"
  />
</div>
`;

exports[`<Input/> updates controlled input values correctly 1`] = `
<div>
  <input
    id="address"
    name="address"
    placeholder="Add address"
    type="text"
    value="Portland, Maine"
  />
</div>
`;
